fix header reflow on phones and pic spacing

--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ section > :last-child {
 }
 
 .profile-pic {
-  width: 100%;
-  padding-inline-start: 20px;
+  height: 100%;
+  padding: 20px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -57,6 +57,8 @@ p {
   width: 80%;
   margin: 40px auto;
   display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
   justify-content: space-between;
 }
 
